# Simplified_Bounding_Volume

./: .gitattributes  .gitignore  README.md  compile.sh
src/: CMakeCache.txt  CMakeLists.txt  main.cpp  main.cpp.autosave  run.sh
src/alg/: BaryComputer.cpp  BaryComputer.h  BoundaryCollapse.cpp  BoundaryCollapse.h  CMakeLists.txt  Common.h  CudaController.cu  CudaController.h  CudaControllerImpl.h  CudaEigen.h  CudaKernelRegion.cu  CudaKernelRegion.h  CudaSamplingTree.cu  CudaSamplingTree.h  CudaShell.h  CudaTriangulatedShell.cu  CudaTriangulatedShell.h  EdgeCollapse.cpp  EdgeCollapse.h  FMM.cpp  FMM.cu  FMM.h  FieldComputer.cu  FieldComputer.h  GPU_FMM.cu  GPU_FMM.cuh  GPU_FMM.cuh.autosave  GPU_FMM.h  GPU_Util.cu  InvalidRegionType.h  KdTreeWrap.cpp  KdTreeWrap.h  KernelRegion.cpp  KernelRegion.h  Logger.cpp  Logger.h  MyPoisson.cpp  MyPoisson.h  NormalChecker.cpp  NormalChecker.h  (+20 more)
src/wkylib/: Bundle.cpp  Bundle.h  CMakeLists.txt  CmdLine.cpp  CmdLine.h  CmdLine.h.autosave  Common.h  debug_util.h  geometry.cpp  geometry.h  geometry.h.autosave
src/wkylib/Cuda/: CMakeLists.txt  CudaAllocator.h  CudaEigen.h  CudaPointer.h  CudaVector.h
src/wkylib/Geometry/: CMakeLists.txt  Common.h  QuadTree.cpp  QuadTree.h  Util.cpp  Util.h  geometry.cpp  geometry.h
src/wkylib/Test/: CMakeLists.txt
src/wkylib/Test/Cuda/: CMakeLists.txt  TestCudaEigen.cu  TestCudaPointer.cu  TestCudaVector.cu  main.cu
src/wkylib/mesh/: CMakeLists.txt  Common.h  IO.cpp  IO.h  Mesh.cpp  Mesh.h  MeshUtil.cpp  MeshUtil.h
test_data/testfastlap/: sphere_2.in
tools/CurveConverter/src/: CMakeLists.txt  main.cpp
tools/GreenFunction/src/: CMakeLists.txt  Common.h  Curve.cpp  Curve.h  SamplePoint.cpp  SamplePoint.h  main.cpp  main.cpp.autosave  matrix_mn.h
tools/PoissonReconstruct/src/: CMakeLists.txt  MyPoisson.cpp  MyPoisson.h  main.cpp
